Fix alignments for `exturl` and footer with `mobile_layout_economy` option.

--- a/source/css/_common/scaffolding/mobile.styl
+++ b/source/css/_common/scaffolding/mobile.styl
@@ -76,6 +76,11 @@
       padding: 0 18px;
     }
 
+    // For external links alignment.
+    > span.exturl {
+      margin-left: 18px;
+    }
+
     // Rewrite paddings & margins inside tags.
     .note > p, .tabs .tab-content .tab-pane > p {
       padding: 0 5px;
@@ -104,6 +109,11 @@
       padding: 10px 10px 0 10px !important;
     }
   }
+
+    // For footer alignment.
+    .footer-inner {
+      margin: 20px 10px;
+    }
 
   // Need to refactor into flex.
   .post-nav {
